--- a/src/components/skills/Skills.scss
+++ b/src/components/skills/Skills.scss
@@ -26,13 +26,13 @@
 
 .skills-container {
   margin-top: 200px;
-  height: 100vh;
-
+  height: 200vh;
   display: grid;
   grid-template-columns: 1fr;
   grid-auto-rows: 1fr;
   row-gap: 100px;
   @include mquery(1260) {
+    height: 100vh;
     grid-template-columns: 1fr 1fr;
     grid-template-rows: 1fr 1fr;
   }
